--- a/app/index.html
+++ b/app/index.html
@@ -3,8 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-</head>
+<link href="app.css" rel="stylesheet"></head>
 <body>
 	<div id="container"></div>
-</body>
+<script type="text/javascript" src="app.js"></script></body>
 </html>
