--- a/app/index.html
+++ b/app/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Document</title>
+	<title>57°湘</title>
+	<meta name="viewport" content="width=device-width,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">  
 <link href="app.css" rel="stylesheet"></head>
 <body>
 	<div id="container"></div>
-<script type="text/javascript" src="app.js"></script></body>
+<script type="text/javascript" src="common.bundle.js"></script><script type="text/javascript" src="app.js"></script></body>
 </html>
